<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <Button
        android:id="@+id/validation_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_verification_code"/>
    <Button
        android:id="@+id/test_permission_m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_permission_request"/>
    <EditText
        android:id="@+id/hide_imm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hide_imm"/>
</LinearLayout>
